; ModuleID = '/home/carl/AnghaBench/TDengine/src/system/lite/src/extr_mgmtDnode.spec.c_mgmtGetNextDnode.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/system/lite/src/extr_mgmtDnode.spec.c_mgmtGetNextDnode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dnodeObj = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @mgmtGetNextDnode(i32* %0, i8** %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8**, align 8
  store i32* %0, i32** %3, align 8
  store i8** %1, i8*** %4, align 8
  %5 = load i8**, i8*** %4, align 8
  %6 = load i8*, i8** %5, align 8
  %7 = icmp eq i8* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %2
  %9 = load i8**, i8*** %4, align 8
  store i8* bitcast (i32* @dnodeObj to i8*), i8** %9, align 8
  br label %12

10:                                               ; preds = %2
  %11 = load i8**, i8*** %4, align 8
  store i8* null, i8** %11, align 8
  br label %12

12:                                               ; preds = %10, %8
  %13 = load i8**, i8*** %4, align 8
  %14 = load i8*, i8** %13, align 8
  ret i8* %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
